prace nad ShopPage.java